Modify colors a bit.

--- a/css/resume.css
+++ b/css/resume.css
@@ -34,7 +34,7 @@ h6 {
 }
 
 .list-social-icons a:hover {
-  color: #E44F24;
+  color: #1D4080;
 }
 
 .list-social-icons a .fa-lg {
@@ -46,7 +46,7 @@ h6 {
 }
 
 .list-icons .list-inline-item i:hover {
-  color: #E44F24;
+  color: #1D4080;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
