--- a/css/resume.css
+++ b/css/resume.css
@@ -141,9 +141,9 @@ a:hover, a:focus, a:active {
   color: #163367;
 }
 
-#vub-logo {
-    width: 215px;
-    height: 80px;
+#unisa-logo {
+    width: 100px;
+    height: 100px;
 }
 
 /* Until horizontal cards are not officially supported */
